src/objects/Person__c.object
<CustomObject>
    <fields>
        <fullName>Actor_id__c</fullName>
        <label>Actor_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Biography__c</fullName>
        <label>Biography</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deathday__c</fullName>
        <label>Deathday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Favorited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Favorited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_of_birth__c</fullName>
        <label>Place_of_birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Person</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Actor_id__c</columns>
        <columns>NAME</columns>
        <columns>Is_Favorited__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>